Bug 1297853 - White flash when creating a private browsing tab r=jchen,kats