mobile/android/geckoview/src/main/java/org/mozilla/gecko/gfx/LayerView.java
@@ -794,4 +794,9 @@ public class LayerView extends ScrollView implements Tabs.OnTabsChangedListener 
         mRenderer.removeZoomedViewListener(listener);
     }
 
+    public void setClearColor(int color) {
+        if (mLayerClient != null) {
+            mLayerClient.setClearColor(color);
+        }
+    }
 }
